Add TAO loop GitHub Actions workflow

--- a/.github/workflows/tao-openai.yml
+++ b/.github/workflows/tao-openai.yml
@@ -1,17 +1,24 @@
 name: TAO Loop (OpenAI)
+
 on:
+  workflow_dispatch:        # manual trigger
   schedule:
-    - cron: "0 */6 * * *"
-  workflow_dispatch:
+    - cron: "0 */6 * * *"   # every 6 hours
 
 jobs:
   run-loop:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
+
       - name: Install jq + curl
         run: sudo apt-get update && sudo apt-get install -y jq curl
+
       - name: Run TAO loop
         env:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
-        run: bash scripts/tao-loop.sh
+        run: |
+          bash scripts/tao-loop.sh
+
